2023-06-22/24_game/log.txt
   Compiling c2rust_out v0.0.0 (/home/c00834010/dev/crusts-benchmarks/2023-06-22/24_game)
error: argument never used
   --> src/main.rs:489:21
    |
487 |                     "{0:} at {2:.2$}\n",
    |                     ------------------- formatting specifier missing
488 |                     build_str_from_raw_ptr(msg as *mut u8),
489 |                     pos,
    |                     ^^^ argument never used

error[E0308]: mismatched types
  --> src/main.rs:29:25
   |
29 |         Some(r) => *r = result,
   |                    --   ^^^^^^ expected `i64`, found `u64`
   |                    |
   |                    expected due to the type of this binding

error[E0308]: mismatched types
   --> src/main.rs:490:21
    |
487 |                     "{0:} at {2:.2$}\n",
    |                                 --- arguments to this function are incorrect
...
490 |                     build_str_from_raw_ptr(str.as_mut_ptr() as *mut u8)
    |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `&usize`, found `&String`
    |
    = note: expected reference `&usize`
               found reference `&std::string::String`
note: associated function defined here
   --> /home/c00834010/.rustup/toolchains/nightly-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/core/src/fmt/rt.rs:132:12
    |
132 |     pub fn from_usize(x: &usize) -> Argument<'_> {
    |            ^^^^^^^^^^
    = note: this error originates in the macro `$crate::format_args` which comes from the expansion of the macro `print` (in Nightly builds, run with -Z macro-backtrace for more info)

For more information about this error, try `rustc --explain E0308`.
error: could not compile `c2rust_out` (bin "main") due to 3 previous errors
